--- a/contact.html
+++ b/contact.html
@@ -8,34 +8,73 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #222;
+      background-image: url('IMG/bg.jpg');
+      background-size: cover;
+      background-position: center;
       color: #ffeb3b;
       margin: 0;
-      padding: 20px;
+      padding: 120px 20px 20px; /* Padding top to avoid navbar overlap */
       display: flex;
       flex-direction: column;
-      align-items: center;    /
+      align-items: center;
       min-height: 100vh;
-      background-image: url(IMG/bg.jpg);
     }
+
+    .navbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      padding: 15px 0;
+      z-index: 1000;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    }
+
+    .navbar a {
+      text-decoration: none;
+      color: #ffeb3b;
+      font-weight: 600;
+      font-size: 1.2rem;
+      padding: 8px 15px;
+      border-radius: 30px;
+      background: rgba(255, 255, 255, 0.15);
+      box-shadow: 0 0 8px #fffbe6;
+      transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
+    }
+
+    .navbar a:hover {
+      background: #ffeb3b;
+      color: #000;
+      transform: scale(1.1);
+      box-shadow: 0 0 20px #fff700;
+    }
+
     section {
-  max-width: 600px;
- background: rgba(255, 235, 59, 0.2); 
-color: #000; 
-  padding: 40px;
-  border-radius: 8px;
-  width: 100%;
-  box-sizing: border-box;
-}
+      max-width: 600px;
+      width: 100%;
+      background: rgba(255, 235, 59, 0.2);
+      color: #000;
+      padding: 40px;
+      border-radius: 8px;
+      box-sizing: border-box;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+    }
 
     h2 {
       text-align: center;
       margin-bottom: 20px;
     }
+
     label {
       display: block;
       margin-top: 15px;
       font-weight: 600;
     }
+
     input, textarea {
       width: 100%;
       padding: 10px;
@@ -44,7 +83,14 @@ color: #000;
       border: none;
       font-size: 1rem;
       resize: vertical;
+      outline: none;
+      transition: box-shadow 0.2s ease;
     }
+
+    input:focus, textarea:focus {
+      box-shadow: 0 0 8px #fdd835;
+    }
+
     button {
       margin-top: 20px;
       width: 100%;
@@ -54,35 +100,15 @@ color: #000;
       border-radius: 5px;
       font-weight: 700;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, transform 0.2s ease;
     }
+
     button:hover {
       background: #fdd835;
+      transform: scale(1.02);
     }
-    nav {
-      margin-top: 30px; 
-      text-align: center;
-    }
-    nav a {
-      text-decoration: none;
-      color: #ffeb3b;
-      font-weight: 600;
-      font-size: 1.2rem;
-      margin: 0 15px;
-      padding: 8px 15px;
-      border-radius: 30px;
-      background: rgba(255, 255, 255, 0.15);
-      box-shadow: 0 0 8px #fffbe6;
-      transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
-      display: inline-block;
-    }
-    nav a:hover {
-      background: #ffeb3b;
-      color: #000;
-      transform: scale(1.1);
-      box-shadow: 0 0 20px #fff700;
-    }
-       footer {
+
+    footer {
       margin-top: auto;
       padding: 20px 0;
       text-align: center;
@@ -91,32 +117,37 @@ color: #000;
       font-weight: 500;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
     }
-    
   </style>
 </head>
 <body>
+
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="gapasin_resume.html">My Resume</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="about.html">About Us</a>
+  </nav>
+
   <section>
     <h2>Contact Us</h2>
-   <form>
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name" placeholder="Enter your full name" required />
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="Enter your full name" required />
 
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" placeholder="qwerty@email.com" required />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" placeholder="you@example.com" required />
 
-  <label for="message">Message:</label>
-  <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
 
-  <button type="submit">Send Message</button>
-</form>
-
+      <button type="submit">Send Message</button>
+    </form>
   </section>
 
-  <nav>
-    <a href="index.html">HOME</a>
-  </nav>
- <footer><hr>
+  <footer>
+    <hr />
     &copy; 2025 Geoprey T. Gapasin. All rights reserved.
   </footer>
+
 </body>
 </html>
