--- a/gapasin_resume.html
+++ b/gapasin_resume.html
@@ -1,141 +1,205 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RESUME</title>
+  <title>Resume - Geoprey T. Gapasin</title>
   <style>
     html, body {
-  height: 100%;
-  margin: 0;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh; /* full viewport height */
-}
-
-    body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
       background-color: bisque;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      margin: 30px;
+      color: #222;
     }
-    h1 {
-      text-align: center;
-      font-size: 40px;
-      margin-bottom: 10px;
+
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      padding: 130px 20px 40px;
+      align-items: center;
+      background: bisque;
     }
-    h2 {
-      text-align: center;
-      font-size: 20px;
-      margin: 5px 0;
+
+    .container {
+      max-width: 700px;
+      background: rgba(255, 228, 196, 0.9);
+      padding: 30px 40px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      width: 100%;
+      box-sizing: border-box;
     }
-    h3 {
-      text-align: left;
-      color: crimson;
-      font-size: 20px;
-      margin-top: 30px;
-      margin-bottom: 10px;
-    }
-    p {
-      color: black;
-      text-align: justify;
-      font-size: 12px; 
-      margin: 5px 0;
-    }
-    hr {
-      border-color: crimson;
-      margin: 20px 0;
-    }
+
     img {
-      display:flex;
-      margin: 0 auto 20px auto;
+      display: block;
+      margin: 0 auto 25px auto;
       width: 144px;
       height: 144px;
       object-fit: cover;
       border-radius: 50%;
       border: 3px solid crimson;
+      box-shadow: 0 4px 10px rgba(220,20,60,0.3);
     }
-    nav {
+
+    h1 {
       text-align: center;
-      margin-top: 30px;
+      font-size: 40px;
+      color: crimson;
+      margin: 0 0 10px;
+      font-weight: 700;
+      letter-spacing: 2px;
     }
 
-    nav a {
-      text-decoration: none;
-      color: black;
+    h2 {
+      text-align: center;
+      font-size: 18px;
+      margin: 5px 0;
       font-weight: 600;
-      font-size: 1.2rem;
-      margin: 0 15px;
-      padding: 8px 15px;
-      border-radius: 30px;
-      background: crimson;
-      box-shadow: 0 0 8px #fffbe6;
-      transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
-      display: inline-block;
+      color: #555;
     }
 
-    nav a:hover {
-      transform: scale(1.1);
-     
+    h3 {
+      font-size: 22px;
+      color: crimson;
+      margin-top: 40px;
+      margin-bottom: 12px;
+      border-bottom: 2px solid crimson;
+      padding-bottom: 5px;
+      font-weight: 700;
+      letter-spacing: 1px;
     }
-    
+
+    p {
+      font-size: 15px;
+      line-height: 1.5;
+      margin: 6px 0;
+      color: #333;
+    }
+
+    strong {
+      color: #990000;
+    }
+
+    hr {
+      border: none;
+      border-bottom: 2px solid crimson;
+      margin: 30px 0;
+      opacity: 0.7;
+    }
+
+    .navbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.75);
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      padding: 15px 0;
+      z-index: 1000;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.7);
+      font-weight: 600;
+      font-size: 1.15rem;
+    }
+
+    .navbar a {
+      color: #ffeb3b;
+      text-decoration: none;
+      padding: 8px 18px;
+      border-radius: 30px;
+      background: rgba(255, 255, 255, 0.15);
+      transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
+      box-shadow: 0 0 8px #fffbe6;
+    }
+
+    .navbar a:hover {
+      background: #ffeb3b;
+      color: #000;
+      transform: scale(1.1);
+      box-shadow: 0 0 20px #fff700;
+    }
+
     footer {
       margin-top: auto;
       padding: 20px 0;
       text-align: center;
-      color:crimson;
+      color: crimson;
       font-style: italic;
       font-weight: 500;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+      user-select: none;
+    }
+
+    @media (max-width: 480px) {
+      body {
+        padding: 110px 15px 30px;
+      }
+      .container {
+        padding: 20px 20px;
+      }
+      h1 {
+        font-size: 32px;
+      }
+      h3 {
+        font-size: 18px;
+      }
     }
   </style>
 </head>
 <body>
-  <h2><img src="IMG/resume.jpg " alt="PDS Photo"/></h2>
-  <h1><b>GEOPREY T. GAPASIN</b></h1>
-  <h2>☎️ 09693172562</h2>
-  <h2>📩 gapasingeoprey@gmail.com</h2>
 
-  <hr />
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="about.html">About Us</a>
+    <a href="contact.html">Contact Us</a>
+  </nav>
 
-  <h3>PERSONAL INFORMATION:</h3>
-  <hr />
-  <p>Complete Name: GAPASIN, GEOPREY T.</p>
-  <p>Birth date: AUGUST 21, 2000</p>
-  <p>Address: BUDAC, TAYUM, ABRA</p>
+  <div class="container">
+    <img src="IMG/resume.jpg" alt="Geoprey T. Gapasin" />
 
-  <hr />
+    <h1>GEOPREY T. GAPASIN</h1>
+    <h2>☎️ 09693172562</h2>
+    <h2>📩 gapasingeoprey@gmail.com</h2>
 
-  <h3>EDUCATIONAL BACKGROUND:</h3>
-  <hr />
-  <p>Primary School: AN-ANAAO ELEMENTARY SCHOOL</p>
-  <p>Year Graduated: 2012</p>
-  <p>Secondary School: HOLY GHOST SCHOOL</p>
-  <p>Year Graduated: 2018</p>
-  <p>Tertiary School: DATA CENTER COLLEGE OF THE PHILIPPINES</p>
-  <p>Course: BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</p>
-  <p>Year: 4TH YEAR</p>
-
-  <hr />
-
-  <h3>REFERENCES:</h3>
-  <hr />
-  <p>Name: CADESLE GAPASIN</p>
-  <p>Agency: DPWH</p>
-  <p>Contact No.: 09465801741</p>
-  <p>Name: ADMIRAL JOHN GAPASIN</p>
-  <p>Agency: DPWH</p>
-  <p>Contact No.: 09640851471</p>
     <hr />
 
-  <nav>
-<a href="index.html">HOME</a>
-</nav>
-  <footer><hr>
+    <section>
+      <h3>PERSONAL INFORMATION</h3>
+      <p><strong>Complete Name:</strong> Geoprey T. Gapasin</p>
+      <p><strong>Birth Date:</strong> August 21, 2000</p>
+      <p><strong>Address:</strong> Budac, Tayum, Abra</p>
+    </section>
+
+    <section>
+      <h3>EDUCATIONAL BACKGROUND</h3>
+      <p><strong>Primary School:</strong> An-Anaao Elementary School (2012)</p>
+      <p><strong>Secondary School:</strong> Holy Ghost School (2018)</p>
+      <p><strong>Tertiary:</strong> Data Center College of the Philippines</p>
+      <p><strong>Course:</strong> Bachelor of Science in Information Technology</p>
+      <p><strong>Year Level:</strong> 4th Year</p>
+    </section>
+
+    <section>
+      <h3>REFERENCES</h3>
+      <p><strong>Name:</strong> Cadesle Gapasin</p>
+      <p><strong>Agency:</strong> DPWH</p>
+      <p><strong>Contact No.:</strong> 0946 580 1741</p>
+
+      <p style="margin-top: 15px;"><strong>Name:</strong> Admiral John Gapasin</p>
+      <p><strong>Agency:</strong> DPWH</p>
+      <p><strong>Contact No.:</strong> 0964 085 1471</p>
+    </section>
+  </div>
+
+  <footer>
     &copy; 2025 Geoprey T. Gapasin. All rights reserved.
   </footer>
+
 </body>
 </html>
