--- a/index.html
+++ b/index.html
@@ -1,79 +1,221 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="css/midterm.css" />
-</head>
-<body>
-  
-  <nav class="navbar">
-    <a href="gapasin_resume.html">My Resume</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact Us</a>
-  </nav>
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-  <header>
-    <h1>WELCOME TO MY PAGE</h1>
-    <h3>by: GEOPREY T. GAPASIN</h3>
-  </header>
+html, body {
+  height: 100%;
+  margin: 0;
+}
 
- <main>
-  <hr />
-  <div class="summary-content active">
-    <h4>Welcome to my website! This is the homepage, feel free to check out my works.</h4>
-  </div>
-  <div class="summary-content">
-    <h4>Check out My Resume to learn about my education and experience.</h4>
-  </div>
-  <div class="summary-content">
-    <h4>Explore the Gallery for photos.</h4>
-  </div>
-   <div class="summary-content">
-    <h4>Want to know more? Why not click About Us.</h4>
-  </div>
-   <div class="summary-content">
-    <h4>I'd love to hear from you! You can reach me through the Contact Us.</h4>
-  </div>
-  <hr />
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(135deg, #fceabb, #f8b500);
+  background-image: url('../IMG/bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  color: #fff;
+  scrollbar-width: thin;
+  scrollbar-color: #ffeb3b rgba(255, 235, 59, 0.2);
+}
 
-  <div class="pagination-summary">
-    <button class="summary-btn" data-step="0">1</button>
-    <button class="summary-btn" data-step="1">2</button>
-    <button class="summary-btn" data-step="2">3</button>
-     <button class="summary-btn" data-step="3">4</button>
-      <button class="summary-btn" data-step="4">5</button>
-  </div>
-</main>
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgba(255, 235, 59, 0.2);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ffeb3b;
+  border-radius: 10px;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding: 15px 0;
+  z-index: 1000;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+}
+
+.navbar a {
+  color: #ffeb3b;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1.2rem;
+  padding: 8px 15px;
+  border-radius: 30px;
+  background: rgba(255, 255, 255, 0.1);
+  transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
+}
+
+.navbar a:focus {
+  outline: 2px solid #ffeb3b;
+  outline-offset: 3px;
+}
+
+.navbar a:hover {
+  background: #ffeb3b;
+  color: #000;
+  transform: scale(1.1);
+  box-shadow: 0 0 20px #fff700;
+}
+
+header {
+  padding-top: 70px;
+  text-align: center;
+  margin-bottom: 40px;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+}
+
+header h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  letter-spacing: 3px;
+  color: white;
+}
+
+header h3 {
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: #ffd966;
+  margin-top: 8px;
+  font-style: italic;
+}
+
+main {
+  flex: 1; 
+  max-width: 700px;
+  margin: 0 auto;
+  background: rgba(0, 0, 0, 0.45);
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.5);
+  transition: background-color 0.3s ease;
+}
+
+main:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+main h4 {
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.8rem;
+  margin-bottom: 15px;
+  color: white;
+  letter-spacing: 1.2px;
+}
+
+.summary-content {
+  display: none;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.8rem;
+  color: white;
+  letter-spacing: 1.2px;
+}
+
+.summary-content.active {
+  display: block;
+  opacity: 1;
+}
+
+.pagination-summary {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.summary-btn {
+  background: rgba(255, 255, 255, 0.15);
+  border: none;
+  border-radius: 30px;
+  color: #ffeb3b;
+  font-weight: 600;
+  font-size: 1.1rem;
+  padding: 8px 15px;
+  margin: 0 10px;
+  cursor: pointer;
+  transition: background 0.3s ease, color 0.3s ease;
+}
+
+.summary-btn:hover,
+.summary-btn.active {
+  background: #ffeb3b;
+  color: #000;
+  transform: scale(1.1);
+  box-shadow: 0 0 20px #fff700;
+}
 
 
-  <footer>
-    <hr />
-    &copy; 2025 Geoprey T. Gapasin. All rights reserved.
-  </footer>
-<script>
-  const summaries = document.querySelectorAll('.summary-content');
-  const summaryButtons = document.querySelectorAll('.summary-btn');
+footer {
+  padding: 20px 0;
+  text-align: center;
+  color: #fff7a1;
+  font-style: italic;
+  font-weight: 500;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+}
+@keyframes glowIn {
+  0% {
+    opacity: 0;
+    text-shadow: none;
+    color: #fff;
+    transform: scale(0.9);
+  }
+  100% {
+    opacity: 1;
+    color: #ffeb3b;
+    text-shadow: 0 0 20px #fff700, 0 0 40px #ffeb3b;
+    transform: scale(1);
+  }
+}
 
-  summaryButtons.forEach(button => {
-    button.addEventListener('click', () => {
-      const step = parseInt(button.dataset.step);
+@keyframes slideGlow {
+  0% {
+    opacity: 0;
+    color: #fff;
+    transform: translateX(-40px);
+    text-shadow: none;
+  }
+  100% {
+    opacity: 1;
+    color: #ffd966;
+    text-shadow: 0 0 10px #ffd700;
+    transform: translateX(0);
+  }
+}
 
-      summaries.forEach(s => s.classList.remove('active'));
-      summaryButtons.forEach(btn => btn.classList.remove('active'));
+header h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  letter-spacing: 3px;
+  animation: glowIn 1.2s ease-out forwards;
+  opacity: 0;
+}
 
-      summaries[step].classList.add('active');
-      button.classList.add('active');
-    });
-  });
-
-
-  summaryButtons[0].classList.add('active');
-</script>
-
-</body>
-</html>
-
+header h3 {
+  font-size: 1.5rem;
+  font-style: italic;
+  margin-top: 8px;
+  animation: slideGlow 1.4s ease-out forwards;
+  animation-delay: 0.4s;
+  opacity: 0;
+}
