--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </aside>
   </main>
 
-  <!-- FOOTER  -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="footer-content">
       <p>&copy; 2025 — All Rights Reserved.</p>
@@ -123,16 +123,19 @@
       </div>
 
       <div class="footer-social-icons">
-        <h4 class="_14">Follow or Message me on</h4>
+        <h4>Follow or Message me on</h4>
         <ul class="social-icons">
-          <li><a href="https://facebook.com/Gapasin.G22" class="social-icon" target="_blank">Facebook</a></li>
-          <li><a href="https://github.com/geopreygap" class="social-icon" target="_blank">GitHub</a></li>
-          <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon">Email</a></li>
+          <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa fa-github"></i></a></li>
+          <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon"><i class="fa fa-google"></i></a></li>
         </ul>
       </div>
     </div>
   </footer>
-  
-<script src="js/main.js"></script>
+
+  <!-- JS -->
+  <script src="js/main.js"></script>
 </body>
 </html>
+
+
