--- a/about.html
+++ b/about.html
@@ -61,5 +61,7 @@
         <li><a href="https://github.com/geopreygap" class="social-icon"> <i class="fa fa-github"></i></a></li>
          <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon"> <i class="fa fa-google"></i></a></li>
 
+  <!-- JS -->
+<script src="js/main.js"></script>
 </body>
 </html>
