Fix HTML structure and formatting issues

--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,12 @@
       <button id="mute-btn"><i class="fa fa-volume-mute"></i></button>
     </div>
   </div>
- <!-- Hamburger -->
+   <header class="header container">
+    <div class="logo">
+      <img src="IMG/resume.jpg" alt="My Logo" class="mark-img">
+      <h1>My E-Portfolio</h1>
+    </div>
+    <!-- Hamburger -->
   <button id="menu-toggle" class="menu-toggle" aria-expanded="false" aria-controls="site-nav" aria-label="Toggle navigation">
     <span class="hamburger-line"></span>
     <span class="hamburger-line"></span>
@@ -113,5 +118,6 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
