Enhance footer with Font Awesome icons
Added Font Awesome stylesheet for icons and updated footer social icons.

--- a/about.html
+++ b/about.html
@@ -8,33 +8,38 @@
   <link rel="stylesheet" href="css/footer.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
- <header class="header container">
-<div class="logo">
-  <img src="IMG/resume.jpg" alt="My Logo" class="mark-img">
-  <h1>My E-Portfolio</h1>
-</div>
+  <!--  HEADER  -->
+  <header class="header container">
+    <div class="logo">
+      <img src="IMG/resume.jpg" alt="My Logo" class="mark-img">
+      <h1>My E-Portfolio</h1>
+    </div>
 
+    <!-- Hamburger -->
+    <button id="menu-toggle" class="menu-toggle" aria-expanded="false" aria-controls="site-nav" aria-label="Toggle navigation">
+      <span class="hamburger-line"></span>
+      <span class="hamburger-line"></span>
+      <span class="hamburger-line"></span>
+    </button>
 
-  <!-- Hamburger -->
-  <button id="menu-toggle" class="menu-toggle" aria-expanded="false" aria-controls="site-nav" aria-label="Toggle navigation">
-    <span class="hamburger-line"></span>
-    <span class="hamburger-line"></span>
-    <span class="hamburger-line"></span>
-  </button>
+    <!-- Navigation -->
+    <nav id="site-nav" class="nav" role="navigation">
+      <a href="index.html" class="active">Home</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+      <a href="RESUME.zip" download class="btn btn-primary">
+        <span style="color:black;">Download Resume</span>
+      </a>
+    </nav>
+  </header>
 
-  <nav id="site-nav" class="nav" role="navigation">
-    <a href="index.html" class="active">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    
-    <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary"><span style="color:black;">Download Resume</span></a>
-  </nav>
-</header>
+  <!--  MAIN CONTENT  -->
   <main class="container main">
     <section class="card">
       <h2>About This Website</h2>
@@ -47,30 +52,33 @@
       </p>
     </section>
   </main>
-   <!-- FOOTER  -->
-<footer class="footer">
-  <div class="footer-content">
-    <p>&copy; 2025 — All Rights Reserved.</p>
-    <div class="social-icons">
-<br>
-    <div class="footer-section quick-links">
-      <h4>🔗 Quick Links</h4>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-<br>
-      <div class="footer-social-icons">
-    <h4 class="_14">Follow or Message me on</h4>
-    <ul class="social-icons">
-        <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://github.com/geopreygap" class="social-icon"> <i class="fa fa-github"></i></a></li>
-         <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon"> <i class="fa fa-google"></i></a></li>
 
-  <!-- JS -->
-<script src="js/main.js"></script>
+  <!--  FOOTER  -->
+  <footer class="footer">
+    <div class="footer-content">
+      <p>&copy; 2025 — All Rights Reserved.</p>
+
+      <div class="footer-section quick-links">
+        <h4>🔗 Quick Links</h4>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-social-icons">
+        <h4 class="_14">Follow or Message me on</h4>
+        <ul class="social-icons">
+          <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa-brands fa-github"></i></a></li>
+          <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon"><i class="fa-solid fa-envelope"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
+  <!--JS -->
+  <script src="js/main.js"></script>
 </body>
 </html>
-
