--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
       </div>
 
       <div class="footer-social-icons">
-        <h4 class="_14">Follow or Message me on</h4>
+        <h4>Follow or Message me on</h4>
         <ul class="social-icons">
           <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa fa-facebook"></i></a></li>
           <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa fa-github"></i></a></li>
@@ -101,3 +101,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
