--- a/gallery.html
+++ b/gallery.html
@@ -33,8 +33,8 @@
   </button>
 
   <nav id="site-nav" class="nav" role="navigation">
-    <a href="index.html" class="active">Home</a>
-    <a href="gallery.html">Gallery</a>
+    <a href="index.html">Home</a>
+    <a href="gallery.html" class="active">Gallery</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
@@ -118,6 +118,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
