--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
 
     <!-- Navigation -->
     <nav id="site-nav" class="nav" role="navigation">
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="portfolio.html">Portfolio</a>
-      <a href="about.html">About</a>
+      <a href="about.html"  class="active">About</a>
       <a href="contact.html">Contact</a>
       <a href="RESUME.zip" download class="btn btn-primary">
         <span style="color:black;">Download Resume</span>
@@ -68,7 +68,7 @@
       </div>
 
       <div class="footer-social-icons">
-        <h4 class="_14">Follow or Message me on</h4>
+        <h4>Follow or Message me on</h4>
         <ul class="social-icons">
           <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa-brands fa-github"></i></a></li>
@@ -82,3 +82,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
