--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,11 @@
 
     <!-- Navigation -->
     <nav id="site-nav" class="nav" role="navigation">
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html"  class="active">Contact</a>
       <a href="RESUME.zip" download="RESUME.zip" class="btn btn-primary">
         <span style="color:black;">Download Resume</span>
       </a>
@@ -92,3 +92,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
