--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,10 @@
     <h2>Projects</h2>
     <p class="text-muted mb-2">Here are some of the applications and systems I’ve developed, complete with screenshots, descriptions, and source links.</p>
 
+     <section id="projects" class="card">
+    <h2>Projects</h2>
+    <p class="text-muted mb-2">Here are some of the applications and systems I’ve developed, complete with screenshots, descriptions, and source links.</p>
+
     <div class="project-grid">
       <!-- PROJECT 1 -->
       <div class="project-item">
@@ -42,7 +46,7 @@
     </div>
   </section>
 
-  <!-- RESUME SECTION -->
+  <!-- 📄 RESUME SECTION -->
   <section id="resume" class="card" style="margin-top: 2rem;">
     <h2>My Resume</h2>
     <p class="text-muted mb-2">Here’s a preview of my professional resume. You can also download it directly below.</p>
@@ -52,6 +56,13 @@
         <i class="fa fa-download"></i> Download Resume
       </a>
     </div>
+
+    <!-- Resume Viewer -->
+    <div style="width:100%; height:600px; border:2px solid #222; border-radius:8px; overflow:hidden;">
+      <iframe src="RESUME.pdf" width="100%" height="100%" style="border:none;"></iframe>
+    </div>
+  </section>
+
 
     <!-- Resume Viewer -->
     <div style="width:100%; height:600px; border:2px solid #222; border-radius:8px; overflow:hidden;">
@@ -153,6 +164,7 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
