--- a/portfolio.html
+++ b/portfolio.html
@@ -92,12 +92,16 @@
     </p>
 
     <div style="text-align:center; margin-bottom: 1.5rem;">
-      <a href="RESUME.pdf" download class="btn btn-primary" style="margin-bottom: 1rem;">
+      <a href="GEOPREY T. GAPASIN-2.pdf" download class="btn btn-primary" style="margin-bottom: 1rem;">
         <i class="fa fa-download"></i> Download Resume
       </a>
     </div>
 
     <!-- Resume Viewer -->
+    <a href="https://raw.githubusercontent.com/geopreygap/GeopreyGapasin.github.io/main/RESUME.pdf" target="_blank" class="btn btn-primary">
+  <i class="fa fa-file-pdf"></i> View Resume (PDF)
+</a>
+
     <div style="width:100%; height:600px; border:2px solid #222; border-radius:8px; overflow:hidden;">
       <iframe src="RESUME.pdf" width="100%" height="100%" style="border:none;"></iframe>
     </div>
@@ -132,3 +136,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
