--- a/contact.html
+++ b/contact.html
@@ -63,22 +63,22 @@
     </section>
   </main>
 
-  <!-- FOOTER -->
+   <!-- FOOTER -->
   <footer class="footer">
     <div class="footer-content">
       <p>&copy; 2025 — All Rights Reserved.</p>
 
-      <div class="footer-section quick-links">
-        <h4>🔗 Quick Links</h4>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
+    <div class="footer-section quick-links">
+      <h4>🔗 Quick Links</h4>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
 
       <div class="footer-social-icons">
-        <h4 class="_14">Follow or Message me on</h4>
+        <h4>Follow or Message me on</h4>
         <ul class="social-icons">
           <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa fa-facebook"></i></a></li>
           <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa fa-github"></i></a></li>
@@ -89,7 +89,10 @@
   </footer>
 
   <!-- JS -->
-  <script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
 
+
+
+ 
