--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <footer class="footer">
     <div class="footer-content">
       <p>&copy; 2025 — All Rights Reserved.</p>
-
+    </div>
     <div class="footer-section quick-links">
       <h4>🔗 Quick Links</h4>
       <ul>
@@ -137,6 +137,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
