--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,11 @@
     </section>
   </main>
 
-<footer class="footer">
-  <div class="footer-content">
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="footer-content">
+      <p>&copy; 2025 — All Rights Reserved.</p>
+    </div>
     <div class="footer-section quick-links">
       <h4>🔗 Quick Links</h4>
       <ul>
@@ -74,20 +77,18 @@
       </ul>
     </div>
 
-    <div class="footer-social-icons">
-      <h4>Follow or Message me on</h4>
-      <ul class="social-icons">
-        <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa fa-github"></i></a></li>
-        <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon"><i class="fa fa-google"></i></a></li>
-      </ul>
+      <div class="footer-social-icons">
+        <h4>Follow or Message me on</h4>
+        <ul class="social-icons">
+          <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa fa-github"></i></a></li>
+          <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon"><i class="fa fa-google"></i></a></li>
+        </ul>
+      </div>
     </div>
+  </footer>
 
-    <p>&copy; 2025 — All Rights Reserved.</p>
-  </div>
-</footer>
-
-<!-- JS -->
+  <!-- JS -->
 <script src="js/main.js"></script>
 </body>
 </html>
@@ -96,4 +97,5 @@
 
 
  
+
 
