--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@
       <img src="IMG/proj0.png">
       <img src="IMG/proj1.png">
       <img src="IMG/proj01.png">
-      <img src="IMG/proj2.png">
+      <img src="IMG/Screenshot 2025-11-16 210314.png">
       <img src="IMG/proj5.png">
       <img src="IMG/proj3.png">
       <img src="IMG/proj4.png">
@@ -119,6 +119,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
