Refactor gallery.html structure and content

--- a/gallery.html
+++ b/gallery.html
@@ -94,9 +94,10 @@
   <!-- FOOTER  -->
 <footer class="footer">
   <div class="footer-content">
+
     <p>&copy; 2025 — All Rights Reserved.</p>
-    <div class="social-icons">
-<br>
+
+    <!-- Quick Links -->
     <div class="footer-section quick-links">
       <h4>🔗 Quick Links</h4>
       <ul>
@@ -105,20 +106,38 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-<br>
-      <div class="footer-social-icons">
-        <h4>Follow or Message me on</h4>
-        <ul class="social-icons">
-          <li><a href="https://facebook.com/Gapasin.G22" class="social-icon"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="https://github.com/geopreygap" class="social-icon"><i class="fa fa-github"></i></a></li>
-          <li><a href="mailto:gapasingeoprey@gmail.com" class="social-icon"><i class="fa fa-google"></i></a></li>
-        </ul>
-      </div>
+
+    <!-- Social Icons -->
+    <div class="footer-section footer-social-icons">
+      <h4>Follow or Message me on</h4>
+      <ul class="social-icons">
+        <li>
+          <a href="https://facebook.com/Gapasin.G22" class="social-icon">
+            <i class="fa fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/geopreygap" class="social-icon">
+            <i class="fa fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a href="mailto:gapasingeoprey@gmail.com" class="social-icon">
+            <i class="fa fa-google"></i>
+          </a>
+        </li>
+      </ul>
     </div>
-  <!-- JS -->
+
+  </div>
+</footer>
+
+<!-- JS -->
 <script src="js/main.js"></script>
 </body>
 </html>
+
+
 
 
 
